--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,11 +2,11 @@ name: Build Docker Image
 
 on:
   push:
-    branches:
-      - main
+    paths:
+      - Dockerfile
   pull_request:
-    branches:
-      - main
+    paths:
+      - Dockerfile
 
 jobs:
   build:
