--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,9 +4,11 @@ on:
   push:
     paths:
       - Dockerfile
+      - .github/workflows/docker-image.yml
   pull_request:
     paths:
       - Dockerfile
+      - .github/workflows/docker-image.yml
 
 jobs:
   build:
@@ -31,3 +33,16 @@ jobs:
       - name: Test Docker image
         run: |
           docker run --rm apache-php82-oci8:latest php -v
+
+      # Log in to GitHub Container Registry
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.GH_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      # Push the Docker image to GHCR
+      - name: Push Docker image to GHCR
+        run: |
+          TIMESTAMP=$(date +%s)
+          docker tag apache-php82-oci8:latest ghcr.io/wrenchpilot/apache-php82-oci8:latest
+          docker tag apache-php82-oci8:$TIMESTAMP ghcr.io/wrenchpilot/apache-php82-oci8:$TIMESTAMP
+          docker push ghcr.io/wrenchpilot/apache-php82-oci8:latest
+          docker push ghcr.io/wrenchpilot/apache-php82-oci8:$TIMESTAMP
