Add OCI testing instructions and script to README and Docker setup

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,6 @@ services:
       - "80:80"
     volumes:
       - ./index.php:/var/www/html/index.php # Test
+      - ./oci.php:/var/www/html/oci.php # OCI Test
       #- /opt/html:/var/www/html # Prod
     restart: always
